# autoresearcher

./: .gitignore  404.html  MANIFEST.in  README.md  agent-test.py  agent.py  index.html  main.py  mkdocs.yml  objects.inv  prompts.py  requirements.txt  run_autoresearcher.py  setup.cfg  setup.py
api/: main.py  openapi.yaml  readme.md  requirements.txt
api/.well-known/: ai-plugin.json
autoresearcher/: LICENSE  README.md  __init__.py
autoresearcher/agents/: data_analysis_agent.py
autoresearcher/data_sources/file_loaders/: pdf_loader.py
autoresearcher/data_sources/web_apis/: base_web_api_data_loader.py  semantic_scholar_loader.py  wikipedia_loader.py
autoresearcher/llms/: openai.py
autoresearcher/utils/: analyze_section.py  count_tokens.py  generate_keyword_combinations.py  get_citations.py  prompts.py
autoresearcher/workflows/literature_review/: combine_answers.py  extract_answers_from_papers.py  extract_citations.py  literature_review.py
autoresearcher/workflows/paper_analysis/: analyze_paper.py
docs/: index.md
docs/reference/: data_sources.md  llms.md  utils.md  workflows.md
reference/data_sources/: index.html
reference/llms/: index.html
reference/utils/: index.html
reference/workflows/: index.html
search/: search_index.json
